[project]
name = "research-pipeline"
version = "0.2.0"
description = "Scientific research pipeline: per-user Karpathy wiki + multi-agent simulation. Ships an MCP server (`rp mcp serve`) so agent platforms can drive the pipeline directly."
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "openai>=1.40",
    "httpx>=0.27",
    "pydantic>=2.7",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "typer>=0.12",
    "rich>=13.7",
    "tomli>=2.0; python_version<'3.11'",
    "platformdirs>=4.0",
    "mcp>=1.0",
]

[project.optional-dependencies]
sim = ["camel-oasis"]
ingest = ["markitdown[pdf,docx,pptx,xlsx]>=0.0.1"]
dev = [
    "mem0ai>=2.0.0",
    "mflow-ai>=0.3.6",
    "ollama>=0.6.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "supermemory>=3.35.0",
    "zep-cloud>=3.20.0",
]

[project.scripts]
rp = "research_pipeline.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/research_pipeline"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

# mem0ai install: PyPI's mem0ai==2.0.0 already ships the v3 algorithm
# (forensically verified — see docs/mem0-version-forensics.md). Default
# install resolves to PyPI for clean fresh-clone UX. To pin against the
# git mainline build (74-line patch delta from PyPI 2.0.0; produces the
# `mem0_real_v3` rows in BENCHMARKS.md), uncomment the block below after
# cloning mem0 to ../mem0 and checking out the desired commit:
#
#   git clone https://github.com/mem0ai/mem0.git ../mem0
#   ( cd ../mem0 && git checkout 693e7093 )
#   # then uncomment [tool.uv.sources] below and re-run uv sync
#
# See BENCHMARKS.md → "Reproducing the two configurations" for context.
#
# [tool.uv.sources]
# mem0ai = { path = "../mem0", editable = true }
